asr: add get_additional_evidence API
